<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_buscar_registro"
        android:title="@string/menu_buscar_registro"
        android:icon="@drawable/icon_buscar_registro"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/menu_ordenar_registros"
        android:title="@string/menu_ordenar_registros"
        android:icon="@drawable/icon_ordenar_registros"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_Numero_registros"
        android:title="@string/menu_Numero_registros"
        android:icon="@drawable/icon_numero_registros"
        app:showAsAction="ifRoom"
        >

    </item>
</menu>