<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Botón de búsqueda de tarjetas -->
    <item
        android:id="@+id/menu_buscar_tarjeta"
        android:title="@string/menu_buscar_tarjeta"
        android:icon="@drawable/icon_buscar_registro"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <!-- Botón de ordenar tarjetas -->
    <item
        android:id="@+id/menu_ordenar_tarjetas"
        android:title="@string/menu_ordenar_tarjetas"
        android:icon="@drawable/icon_ordenar_registros"
        app:showAsAction="ifRoom"/>

    <!-- Botón de número de tarjetas -->
    <item
        android:id="@+id/menu_numero_tarjetas"
        android:title="@string/menu_numero_tarjetas"
        android:icon="@drawable/icon_numero_registros"
        app:showAsAction="ifRoom"/>
</menu>