<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle.Detalle_tarjeta">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <!-- Título de la tarjeta -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/Txt_D_Titulo_Tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/D_Titulo_Tarjeta"
                android:text="@string/D_Titulo_Tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_regular"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Número de la tarjeta -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/Txt_D_Numero_Tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/D_Numero_Tarjeta"
                android:text="@string/D_Numero_Tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_regular"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Nombre en la tarjeta -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/Txt_D_Nombre_Tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/D_Nombre_Tarjeta"
                android:text="@string/D_Nombre_Tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_regular"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Fecha de expiración -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/Txt_D_Fecha_Expiracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/D_Fecha_Expiracion"
                android:text="@string/D_Fecha_Expiracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_regular"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- CVV -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/Txt_D_CVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/D_CVV"
                android:text="@string/D_CVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_regular"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Nota adicional -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/Txt_D_Nota_Tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/D_Nota_Tarjeta"
                android:text="@string/D_Nota_Tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_regular"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Tiempo de registro -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/Txt_D_Tiempo_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/D_Tiempo_registro"
                android:text="@string/D_Tiempo_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_regular"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Tiempo de actualización -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/Txt_D_Tiempo_actualizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/D_Tiempo_actualizacion"
                android:text="@string/D_Tiempo_actualizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotocondensed_regular"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>