<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".Registro_usuario.Registro">

    <TextView
        android:text="@string/TXT_Bienvenidos"
        android:textSize="25sp"
        android:fontFamily="@font/robotocondensed_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/TXT_Mensaje"
        android:textSize="18sp"
        android:fontFamily="@font/robotocondensed_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Contraseña Usuario-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">
        
        <EditText
            android:id="@+id/EtMPassword"
            android:fontFamily="@font/robotocondensed_regular"
            android:hint="@string/EtMPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
    </com.google.android.material.textfield.TextInputLayout>

    <!--Contraseña confirmar-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/EtCPassword"
            android:fontFamily="@font/robotocondensed_regular"
            android:hint="@string/EtCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Registrar contraseña maestra-->
    <Button
        android:id="@+id/Btn_Registrar"
        android:text="@string/Btn_Registrar"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robotocondensed_regular"
        android:textColor="#fff"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
</androidx.appcompat.widget.LinearLayoutCompat>